src-ken&y/objects/Requisition_Line__c.object
<CustomObject>
    <customHelpPage>HelpRequisitions</customHelpPage>
    <fields>
        <fullName>Amount__c</fullName>
        <formula>Unit_Price__c * Quantity_Ordered__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Autonumber__c</fullName>
        <displayFormat>{0000000000}</displayFormat>
        <externalId>true</externalId>
        <label>Autonumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <formula>Item__r.Class__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Class</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <formula>Requisition__r.Currency__r.ISO_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Cancelled__c</fullName>
        <label>Date Cancelled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Closed__c</fullName>
        <label>Date Closed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Default_Purchase_Agreement_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Purchase Agreement Line</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contract_Line__c.Status__c</field>
                <operation>equals</operation>
                <value>Open</value>
            </filterItems>
            <filterItems>
                <field>Contract_Line__c.Approved__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contract_Line__c</referenceTo>
        <relationshipLabel>Requisition Lines</relationshipLabel>
        <relationshipName>Requisition_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delivery_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Location__c.Facility__c</field>
                <operation>equals</operation>
                <valueField>$Source.Facility__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Requisition Lines</relationshipLabel>
        <relationshipName>Requisition_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Facility</label>
        <referenceTo>Facility__c</referenceTo>
        <relationshipLabel>Requisition Lines</relationshipLabel>
        <relationshipName>Requisition_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item</label>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>Requisition Lines</relationshipLabel>
        <relationshipName>Requisition_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Line_Type__c</fullName>
        <label>Line Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Line__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Line</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Need_Date__c</fullName>
        <label>Need Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Purchasing_UOM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchasing UOM</label>
        <referenceTo>UOM__c</referenceTo>
        <relationshipLabel>Requisition Lines</relationshipLabel>
        <relationshipName>Requisition_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity_Ordered__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quantity Ordered</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Released__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quantity Released</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remaining_Quantity__c</fullName>
        <formula>Quantity_Ordered__c - Quantity_Released__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Quantity</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Requester_Notes__c</fullName>
        <description>Requester Notes holds the information of the item that is not available in the items list of the company.</description>
        <inlineHelpText>Requester Notes holds the information of the item that is not available in the items list of the company.</inlineHelpText>
        <label>Requester Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requisition__c</fullName>
        <label>Requisition</label>
        <referenceTo>Requisition__c</referenceTo>
        <relationshipLabel>Requisition Lines</relationshipLabel>
        <relationshipName>Requisition_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Order Line</label>
        <referenceTo>Sales_Order_Line__c</referenceTo>
        <relationshipLabel>Requisition Lines</relationshipLabel>
        <relationshipName>Requisition_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Transaction_Type__c</fullName>
        <label>Sub Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier</label>
        <referenceTo>Supplier__c</referenceTo>
        <relationshipLabel>Requisition Lines</relationshipLabel>
        <relationshipName>Requisition_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <label>Requisition Line</label>
    <nameField>
        <label>Requisition Line Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Requisition Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Item_Required</fullName>
        <active>false</active>
        <errorConditionFormula>OR(ISNULL(Item__c),ISBLANK(Item__c))</errorConditionFormula>
        <errorMessage>Item is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Need_Date_less_than_today</fullName>
        <active>true</active>
        <errorConditionFormula>AND( OR ( ISNEW() ,  ISCHANGED(Need_Date__c) ),
Need_Date__c &lt;  TODAY())</errorConditionFormula>
        <errorMessage>Need date cannot be a past date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Purchasing_UOM_is_required</fullName>
        <active>true</active>
        <description>Purchasing UOM is required</description>
        <errorConditionFormula>OR(ISNULL(Purchasing_UOM__c),ISBLANK(Purchasing_UOM__c)) 
&amp;&amp; NOT(ISBLANK(Item__c)) &amp;&amp;

( IsPickval (Item__r.Source__c, &apos;Purchased&apos;) ||
IsPickval (Item__r.Source__c, &apos;Miscellaneous&apos;) ||
IsPickval (Item__r.Source__c, &apos;Expense&apos;) ||
IsPickval (Item__r.Source__c, &apos;Outside Processing&apos;) )</errorConditionFormula>
        <errorMessage>Purchasing UOM is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Quantity_Required</fullName>
        <active>true</active>
        <errorConditionFormula>OR(ISBLANK(Quantity_Ordered__c), ISNULL(Quantity_Ordered__c), Quantity_Ordered__c == 0)</errorConditionFormula>
        <errorMessage>Quantity Ordered is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Default_Contract_Line_Item_UOM</fullName>
        <active>true</active>
        <description>Item and UOM on Default Purchase Agreement Line must match to Requisition Line.</description>
        <errorConditionFormula>NOT(ISBLANK(Default_Purchase_Agreement_Line__c)) &amp;&amp; 
(
Item__c != Default_Purchase_Agreement_Line__r.Item__c  ||
 Purchasing_UOM__c !=  Default_Purchase_Agreement_Line__r.Purchase_UOM__c
)</errorConditionFormula>
        <errorMessage>Item and Purchase UOM on Default Purchase Agreement Line must match with Requisition Line</errorMessage>
    </validationRules>
</CustomObject>